--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,15 +5,20 @@
 }
 
 body{
- background: linear-gradient(to top, #1CB5E0, #000046); 
+ background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
  height:100vh;
  font-family: Roboto, Arial, sans-serif;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
 }
 
 .form{
     position: relative;
     margin-left: auto;
     margin-right: auto;
+    background-color: #fffa;
 }
 
 .formulario{
@@ -61,7 +66,7 @@ textarea{
 
 input[type=submit]{
     display: block;
-    background-color: #ccc;
+    font-size: 1.1em;
     height: 35px;
     border: none;
     outline: 0;
@@ -70,4 +75,11 @@ input[type=submit]{
     margin: 0 auto;
     text-align: center;
     border-radius: 15px;
+    background-color:#00bf72
 }
+
+.map {
+    height: 400px;
+    width: 100%;
+}
+  
